--- a/筆記.md
+++ b/筆記.md
@@ -14,3 +14,9 @@ https://datainpoint.substack.com/s/jovyans
 taiwan_number_one = True
 taiwan_number_1 = True
 ```
+-Python禪學：import this
+```
+Now is better than never.
+Simple is better than complex.
+If the implementation is hard to explain, it's a bad idea.
+```
