--- a/筆記.md
+++ b/筆記.md
@@ -20,3 +20,7 @@ Now is better than never.
 Simple is better than complex.
 If the implementation is hard to explain, it's a bad idea.
 ```
+## 第十三週 | 函數與資料型別。
+
+- 內建函數與詳細介紹可以參考：https://docs.python.org/3/library/functions.html
+- 
