--- a/筆記.md
+++ b/筆記.md
@@ -23,4 +23,16 @@ If the implementation is hard to explain, it's a bad idea.
 ## 第十三週 | 函數與資料型別。
 
 - 內建函數與詳細介紹可以參考：https://docs.python.org/3/library/functions.html
-- 
+- 自行定義函數需要考慮五個組成要件：
+1. 函數名稱：購買珍珠鮮奶茶。
+2. 輸入：中杯 35 元；大杯 50 元。
+3. 參數：甜度（無糖、微糖、半糖、少糖、全糖）與冰塊（去冰、少冰、全冰）。
+4. 函數主體：點餐、貼標籤、加珍珠、加冰塊、倒茶、加鮮奶一直到封口。
+5. 輸出：珍珠鮮奶茶。
+```
+def function_name(INPUTS, PARAMETERS):
+    # body of the function
+    # ...
+    # ...sequence of statements
+    return OUTPUTS
+```
