--- a/筆記.md
+++ b/筆記.md
@@ -36,3 +36,17 @@ def function_name(INPUTS, PARAMETERS):
     # ...sequence of statements
     return OUTPUTS
 ```
+- 為物件取名稱的時候，應該要謹記三個原則：
+1. 命名的時候使用有意義的全小寫英文，採用蛇形命名法（Snake case），不同單字之間以底線 _ 相隔。
+2. 不可以使用保留字做為物件的命名，這樣做將會產生直譯錯誤。
+3. 不要使用內建函數做為物件的命名，這樣做將會覆蓋內建函數的功能。
+```
+Python 的保留字有 35 個（來源：https://docs.python.org/3/reference/lexical_analysis.html#keywords）
+False      await      else       import     pass
+None       break      except     in         raise
+True       class      finally    is         return
+and        continue   for        lambda     try
+as         def        from       nonlocal   while
+assert     del        global     not        with
+async      elif       if         or         yield
+```
