--- a/筆記.md
+++ b/筆記.md
@@ -50,3 +50,9 @@ as         def        from       nonlocal   while
 assert     del        global     not        with
 async      elif       if         or         yield
 ```
+- Python 基本的資料型別有五個：
+1. 整數（int）
+2. 浮點數（float）
+3. 文字（str）
+4. 布林（bool）
+5. None（NoneType）
