--- a/筆記.md
+++ b/筆記.md
@@ -56,3 +56,10 @@ async      elif       if         or         yield
 3. 文字（str）
 4. 布林（bool）
 5. None（NoneType）
+- 數值運算：整數與浮點數常用來進行數值運算，常用的數值運算符號有七種
+```
++ 、 - 、 * 、 / ：加減乘除
+** ：次方
+% ：回傳餘數
+// ：回傳商數
+```
