--- a/筆記.md
+++ b/筆記.md
@@ -62,4 +62,11 @@ async      elif       if         or         yield
 ** ：次方
 % ：回傳餘數
 // ：回傳商數
+數值運算時的優先順序遵循：小括號最優先、再來是次方、接著是乘除、最後是加減。
+```
+- 文字處理：可以使用跳脫字元反斜線 \、不同樣式的引號或者三個雙引號來完成宣告。
+```
+mcd = 'I\'m lovin\' it'
+mcd = "I'm lovin' it"
+mcd = """I'm lovin' it"""
 ```
