--- a/筆記.md
+++ b/筆記.md
@@ -70,3 +70,18 @@ mcd = 'I\'m lovin\' it'
 mcd = "I'm lovin' it"
 mcd = """I'm lovin' it"""
 ```
+- 其中由成對的三個雙引號 ““““““ 建立的文字常被直接放在自行定義函數的主體下的第一段，被稱為文件字串（Docstring），如果在自行定義函數時有擺放文件字串，將會在應用 help 函數查詢時被印出來。
+```
+def fahrenheit_to_celsius(x):
+    """
+    Return the Fahrenheit degree from a Celsius degree.
+    """
+    out = (x - 32) * 5/9
+    return out
+help(fahrenheit_to_celsius)
+## Help on function fahrenheit_to_celsius in module __main__:
+
+## fahrenheit_to_celsius(x)
+##     Return the Fahrenheit degree from a Celsius degree.
+```
+- 運用文字時常會使用到的技巧是以特定格式印出（Print with format），具體來說是在文字中嵌入宣告好的物件，如此文字顯示的內容將隨著物件中所儲存的值而變動，透過文字的 .format() 方法以及 f-string 語法都可以達成以特定格式印出。
