--- a/筆記.md
+++ b/筆記.md
@@ -85,3 +85,13 @@ help(fahrenheit_to_celsius)
 ##     Return the Fahrenheit degree from a Celsius degree.
 ```
 - 運用文字時常會使用到的技巧是以特定格式印出（Print with format），具體來說是在文字中嵌入宣告好的物件，如此文字顯示的內容將隨著物件中所儲存的值而變動，透過文字的 .format() 方法以及 f-string 語法都可以達成以特定格式印出。
+```
+def hello_anyone(anyone):
+    out = "Hello, {}!".format(anyone)
+    # out = f"Hello, {anyone}!"
+    return out
+print(hello_anyone("Luke"))
+print(hello_anyone("Anakin"))
+## Hello, Luke!
+## Hello, Anakin!
+```
