--- a/筆記.md
+++ b/筆記.md
@@ -95,3 +95,26 @@ print(hello_anyone("Anakin"))
 ## Hello, Luke!
 ## Hello, Anakin!
 ```
+- 常用的特定格式有指定小數位數的浮點數格式、有千分位逗號的金額格式，都可以透過 .format() 方法以及 f-string 語法達成。
+```
+def fahrenheit_to_celsius(x):
+    """
+    Return the Fahrenheit degree from a Celsius degree.
+    """
+    out = (x - 32) * 5/9
+    msg = "{:.1f} degrees celsius is equal to {:.1f} degrees fahrenheit".format(x, out)
+    return msg
+
+def big_mac_index(country, currency, price):
+    msg = f"A Big Mac costs {price:,.2f} {currency} in {country}."
+    return msg
+
+print(fahrenheit_to_celsius(32))
+print(fahrenheit_to_celsius(212))
+print(big_mac_index('US', 'USD', 5.65))
+print(big_mac_index('South Korea', 'Won', 6520))
+## 32.0 degrees celsius is equal to 0.0 degrees fahrenheit
+## 212.0 degrees celsius is equal to 100.0 degrees fahrenheit
+## A Big Mac costs 5.65 USD in US.
+## A Big Mac costs 6,520.00 Won in South Korea.
+```
