--- a/筆記.md
+++ b/筆記.md
@@ -84,7 +84,7 @@ help(fahrenheit_to_celsius)
 ## fahrenheit_to_celsius(x)
 ##     Return the Fahrenheit degree from a Celsius degree.
 ```
-- 運用文字時常會使用到的技巧是以特定格式印出（Print with format），具體來說是在文字中嵌入宣告好的物件，如此文字顯示的內容將隨著物件中所儲存的值而變動，透過文字的 .format() 方法以及 f-string 語法都可以達成以特定格式印出。
+- 文字：時常會使用到的技巧是以特定格式印出（Print with format），具體來說是在文字中嵌入宣告好的物件，如此文字顯示的內容將隨著物件中所儲存的值而變動，透過文字的 .format() 方法以及 f-string 語法都可以達成以特定格式印出。
 ```
 def hello_anyone(anyone):
     out = "Hello, {}!".format(anyone)
@@ -95,7 +95,7 @@ print(hello_anyone("Anakin"))
 ## Hello, Luke!
 ## Hello, Anakin!
 ```
-- 常用的特定格式有指定小數位數的浮點數格式、有千分位逗號的金額格式，都可以透過 .format() 方法以及 f-string 語法達成。
+- 數值：常用的特定格式有指定小數位數的浮點數格式、有千分位逗號的金額格式，都可以透過 .format() 方法以及 f-string 語法達成。
 ```
 def fahrenheit_to_celsius(x):
     out = (x - 32) * 5/9
@@ -114,4 +114,35 @@ print(big_mac_index('South Korea', 'Won', 6520))
 ## 212.0 degrees celsius is equal to 100.0 degrees fahrenheit
 ## A Big Mac costs 5.65 USD in US.
 ## A Big Mac costs 6,520.00 Won in South Korea.
+```
+- 文字：能夠搭配的運算符號僅有兩個，使用加號 + 進行文字的合併，以及利用乘號 * 進行文字的複製。
+```
+def concatenate_strings(x, y):
+    """
+    Return the concatenation of strings x and y.
+    """
+    return x + y
+def duplicate_strings(x, n):
+    """
+    Return n duplicates of string x.
+    """
+    return x*n
+
+print(concatenate_strings("55", "66"))
+print(duplicate_strings("5566", 5))
+## 5566
+## 55665566556655665566
+```
+- 條件：當我們進行流程控制或者資料篩選的時候會需要仰賴布林（bool），布林只有 True 與 False 這兩個值。這裡特別提醒，Python 與絕大多數的程式語言相同，對於英文大小寫是敏感的（Case-sensitive），像是 True 能夠被識別為布林，但是 TRUE 或者 true 則會被視作物件名稱。
+- 條件：除了直接輸入 True 與 False，我們也可以透過條件得到布林，用來建構條件的運算符號分為關係運算符（Relational operators）以及邏輯運算符（Logical operators）
+```
+關係運算符包含：
+== 、 != ：等於以及不等於。
+> 、 >= 、 < 、 <= ：大於、大於等於、小於以及小於等於。
+in ：是否存在於。
+```
+```
+邏輯運算符則包含：
+and 、 or ：交集與聯集。
+not ：非。
 ```
