--- a/筆記.md
+++ b/筆記.md
@@ -134,7 +134,7 @@ print(duplicate_strings("5566", 5))
 ## 55665566556655665566
 ```
 - 條件：當我們進行流程控制或者資料篩選的時候會需要仰賴布林（bool），布林只有 True 與 False 這兩個值。這裡特別提醒，Python 與絕大多數的程式語言相同，對於英文大小寫是敏感的（Case-sensitive），像是 True 能夠被識別為布林，但是 TRUE 或者 true 則會被視作物件名稱。
-- 條件：除了直接輸入 True 與 False，我們也可以透過條件得到布林，用來建構條件的運算符號分為關係運算符（Relational operators）以及邏輯運算符（Logical operators）
+- 條件：除了直接輸入 True 與 False，我們也可以透過條件得到布林，用來建構條件的運算符號分為關係運算符（Relational operators）以及邏輯運算符（Logical operators）。關係運算符與邏輯運算符的差別在於前者針對數值或者文字應用，後者則針對布林應用。
 ```
 關係運算符包含：
 == 、 != ：等於以及不等於。
@@ -145,4 +145,53 @@ in ：是否存在於。
 邏輯運算符則包含：
 and 、 or ：交集與聯集。
 not ：非。
+```
+```
+x = 55
+y = 66
+a_string = "Hello, World!"
+
+print(x == y)
+print(x != y)
+print(x > y)
+print(x >= y)
+print(x < y)
+print(x <= y)
+print("H" in a_string)
+print("I" in a_string)
+print(True and False)
+print(True or False)
+print(not True)
+print(not False)
+## False
+## True
+## False
+## False
+## True
+## True
+## True
+## False
+## False
+## True
+## False
+## True
+```
+- None：None 是未定義值（Undefined value），與 NA 值（Not Available）或虛無值 Null 等觀念相近，在一個沒有使用 return 回傳輸出的自行定義函數，None 就會是該函數的預設輸出。例如我們自行定義了一個只有將 “Hello, World!“ 字串印出、而沒有 return 的 hello_world 函數。
+```
+def hello_world():
+    print("Hello, World!")
+functions_output = hello_world()
+print(functions_output)
+print(type(functions_output))
+## Hello, World!
+## None
+## <class 'NoneType'>
+```
+- 判斷資料型別的函數：使用 isinstance(x, classinfo) 函數判斷純量類型，其中 x 輸入物件名稱、 classinfo 輸入資料型別名稱。
+```
+# Check if function input is an int
+print(isinstance(5566, int))
+print(isinstance("5566", int))
+## True
+## False
 ```
