--- a/筆記.md
+++ b/筆記.md
@@ -195,3 +195,59 @@ print(isinstance("5566", int))
 ## True
 ## False
 ```
+- 轉換資料型別的函數：使用與目標轉換型別同名的函數轉換資料型別。
+
+1. int()：轉換純量為整數型別。
+2. float()：轉換純量為浮點數型別。
+3. bool()：轉換純量為布林型別。
+4. str()：轉換純量為文字型別。
+```
+```
+使用 int() 函數可以輸入浮點數、布林與文字讓 Python 轉換成整數。
+print(int(5566.0))
+print(int(True))
+print(int(False))
+print(int("5566"))
+## 5566
+## 1
+## 0
+## 5566
+```
+```
+使用 bool() 函數可以輸入整數、浮點數與文字讓 Python 轉換成布林，輸入浮點數或整數類型的 0 會轉換成為 False ，其他數字則一律轉換為 True，若輸入文字，無論輸入文字內容為何都一律轉換成 True 。
+print(bool(0))
+print(bool(0.0))
+print(bool(1))
+print(bool(1.0))
+print(bool(5566.0))
+print(bool(-5566.0))
+print(bool("True"))
+print(bool("TRUE"))
+print(bool("true"))
+print(bool("False"))
+print(bool("FALSE"))
+print(bool("false"))
+## False
+## False
+## True
+## True
+## True
+## True
+## True
+## True
+## True
+## True
+## True
+## True
+```
+```
+使用 str() 函數可以輸入整數、浮點數與布林讓 Python 轉換成文字。
+print(str(5566))
+print(str(5566.0))
+print(str(True))
+print(str(False))
+## 5566
+## 5566.0
+## True
+## False
+```
